[package]
edition = "2021"
name = "my-s3"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
aws-sdk-s3 = "1.12.0"
base64-simd = "0.8.0"
bytes = "1.5.0"
bytes-stream = "0.0.3"
clap = {version = "4.3.21", features = ["derive"]}
crc32c = "0.6.4"
crc32fast = "1.3.2"
derivative = "2.2.0"
digest = "0.10.7"
futures = "0.3.15"
hex-simd = "0.8.0"
hyper = {version = "0", features = ["full"]}
hyper-tls = "0.6.0"
hyper-util = {version = "0.1.2", features = ["full"]}
md-5 = "0.10.5"
mime = "0.3.17"
native-tls = "0.2.11"
nugine-rust-utils = "0.3.1"
numeric_cast = "0.2.1"
s3s = "0.8.1"
serde_json = "1.0.104"
sha1 = "0.10.5"
sha2 = "0.10.7"
tokio = {version = "1", features = ["full"]}
tokio-native-tls = "0.3.1"
tokio-util = {version = "0.7.10", features = ["full"]}
tracing = "0.1"
tracing-error = "0.2.0"
tracing-subscriber = {version = "0.3.17", features = ["env-filter", "time"]}
transform-stream = "0.3.0"

# use digest::Digest;
# use numeric_cast::TruncatingCast;
# use rust_utils::default::default;
