[package]
edition = "2021"
name = "foo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = {version = "1", features = ["derive"]}
async-trait = "0.1.73"
atty = "0.2.14"
aws-config = "0.56.1"
aws-sdk-s3 = "0.34.0"
base64-simd = "0.8.0"
bitcode = "0.5.0"
bytes = "1.5.0"
bytes-stream = "0.0.3"
clap = {version = "4.3.21", features = ["derive"]}
crc32c = "0.6.4"
crc32fast = "1.3.2"
derivative = "2.2.0"
digest = "0.10.7"
futures = "0.3.15"
hex-simd = "0.8.0"
hyper = {version = "0", features = ["full"]}
hyper-tls = "0.6.0"
hyper-util = {version = "0.1.2", features = ["full"]}
libfuzzer-sys = "0.4.7"
md-5 = "0.10.5"
mime = "0.3.17"
native-tls = "0.2.11"
nugine-rust-utils = "0.3.1"
numeric_cast = "0.2.1"
s3s = "0.8.1"
s3s-aws = "0.8.1"
serde = "1.0.196"
serde_json = "1.0.113"
sha1 = "0.10.5"
sha2 = "0.10.7"
tokio = {version = "1", features = ["full"]}
tokio-native-tls = "0.3.1"
tokio-util = {version = "0.7.10", features = ["full"]}
tracing = "0.1"
tracing-error = "0.2.0"
tracing-subscriber = {version = "0.3.18", features = ["ansi", "env-filter", "time"]}
transform-stream = "0.3.0"

[dev-dependencies]
env_logger = "0.11.0"
xflags = "0.3.2"



[build]
rustflags = ["--cfg", "fuzzing"]
