[package]
edition = "2021"
name = "foo-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = {version = "1", features = ["derive"]}
bytes = "1.5.0"
libfuzzer-sys = "0.4"
s3s = "0.8.1"
tokio = {version = "1", features = []}
tracing = "0.1"

[dependencies.foo]
path = ".."

[[bin]]
bench = false
doc = false
name = "fuzz_s3_replication"
path = "fuzz_targets/fuzz_s3_replication.rs"
test = false
