[package]
edition = "2021"
name = "s3-kit-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = {version = "1", features = ["derive"]}
bitcode = "0.5.0"
bytes = "1.5.0"
libfuzzer-sys = "0.4.7"
s3s = "0.8.1"
serde = "1.0.196"
tokio = {version = "1", features = []}
tracing = "0.1"

[dependencies.s3-kit]
path = ".."

[[bin]]
bench = false
doc = false
name = "fuzz_s3_replication"
path = "fuzz_targets/fuzz_s3_replication.rs"
test = false
